Update Colab link in Jupyter notebook

--- a/Qwen3(0_6B)_ja_dataset_FT.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kolinz/notebook4AI/blob/main/Qwen3(0_6B)%E3%82%92%E6%97%A5%E6%9C%AC%E8%AA%9E%E3%83%87%E3%83%BC%E3%82%BF%E3%82%BB%E3%83%83%E3%83%88%E3%81%A7%E3%83%95%E3%82%A1%E3%82%A4%E3%83%B3%E3%83%81%E3%83%A5%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kolinz/notebook4AI/blob/main/Qwen3(0_6B)_ja_dataset_FT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
