--- a/Qwen3(0_6B)_ja_dataset_FT.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT.ipynb
@@ -24,7 +24,7 @@
         "\n",
         "- Unslothを使っています。Unslothについては、[こちらのガイド](https://docs.unsloth.ai/get-started/install-and-update)をご参照ください。\n",
         "- このノートブックは、 [LGPL-3.0](https://github.com/unslothai/notebooks?tab=LGPL-3.0-1-ov-file#readme)ライセンスが適用されます。\n",
-        "- このノートブックのオリジナルは、[こちらのノートブック](https://github.com/unslothai/notebooks/blob/main/nb/Qwen3_(4B)-Instruct.ipynb)です。\n",
+        "- このノートブックのオリジナルは、[こちらのノートブック](`https://github.com/unslothai/notebooks/blob/main/nb/Qwen3_(4B)-Instruct.ipynb`)です。\n",
         "- このノートブックは、Qwen3 0.6Bのモデルに対して、Google DriveにアップロードされたCSV形式（文字コードはBOM付きのUTF-8）の日本語データセットを使ってファインチューニングができるように改造しました。\n",
         "- このノートブックは、Google Colab無料プランで使用可能なNVIDIA Tesla T4 GPUで動かすことができます。\n"
       ]
