--- a/Qwen3(0_6B)_ja_dataset_FT.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT.ipynb
@@ -543,7 +543,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title Show final memory and time stats\n",
+        "# @title 使用したメモリ量（VRAM）\n",
         "used_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
         "used_memory_for_lora = round(used_memory - start_gpu_memory, 3)\n",
         "used_percentage = round(used_memory / max_memory * 100, 3)\n",
