--- a/Qwen3(0_6B)_ja_dataset_FT.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT.ipynb
@@ -140,7 +140,7 @@
         "\n",
         "model, tokenizer = FastLanguageModel.from_pretrained(\n",
         "    model_name = \"unsloth/Qwen3-0.6B\",\n",
-        "    max_seq_length = 4096, # Choose any for long context!\n",
+        "    max_seq_length = 8192, # Choose any for long context!\n",
         "    load_in_4bit = True,  # 4 bit quantization to reduce memory\n",
         "    load_in_8bit = False, # [NEW!] A bit more accurate, uses 2x memory\n",
         "    full_finetuning = False, # [NEW!] We have full finetuning now!\n",
@@ -507,7 +507,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title Show current memory stats\n",
+        "# @title 現在のメモリ量（GPU）\n",
         "gpu_stats = torch.cuda.get_device_properties(0)\n",
         "start_gpu_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
         "max_memory = round(gpu_stats.total_memory / 1024 / 1024 / 1024, 3)\n",
@@ -543,7 +543,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title 使用したメモリ量（VRAM）\n",
+        "# @title 使用したメモリ量（GPU）\n",
         "used_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
         "used_memory_for_lora = round(used_memory - start_gpu_memory, 3)\n",
         "used_percentage = round(used_memory / max_memory * 100, 3)\n",
@@ -645,7 +645,7 @@
         "    from unsloth import FastLanguageModel\n",
         "    model, tokenizer = FastLanguageModel.from_pretrained(\n",
         "        model_name = \"lora_model\", # YOUR MODEL YOU USED FOR TRAINING\n",
-        "        max_seq_length = 2048,\n",
+        "        max_seq_length = 8192,\n",
         "        load_in_4bit = True,\n",
         "    )"
       ]
