--- a/Qwen3(0_6B)_ja_dataset_FT.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT.ipynb
@@ -22,7 +22,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 0.ファインチューニング向けデータセットの用意\n",
+        "### Step0.ファインチューニング向けデータセットの用意\n",
         "\n",
         "■ 今回使用するデータセット「faq-dataset.csv」は、次のような構造のCSVファイルで、文字コードはUTF-8(BOM付き)です。列は、`conversations`のみです。文字コードがUTF-8(BOM付き)であることで、Microsoft Excelで開いた際に文字化けしません。\n",
         "\n",
