--- a/Qwen3(0_6B)_ja_dataset_FT.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT.ipynb
@@ -50,6 +50,7 @@
       },
       "source": [
         "### Step1.Unslothのインストール"
+        "トラブルを減らすために動作確認ができたソフトウェアのバージョンに固定しています。\n",
       ]
     },
     {
@@ -68,11 +69,18 @@
         "    # Do this only in Colab notebooks! Otherwise use pip install unsloth\n",
         "    import torch; v = re.match(r\"[0-9]{1,}\\.[0-9]{1,}\", str(torch.__version__)).group(0)\n",
         "    xformers = \"xformers==\" + (\"0.0.33.post1\" if v==\"2.9\" else \"0.0.32.post2\" if v==\"2.8\" else \"0.0.29.post3\")\n",
-        "    !pip install --no-deps bitsandbytes accelerate {xformers} peft trl triton cut_cross_entropy unsloth_zoo\n",
+        "    !pip install --no-deps {xformers}\n",
+        "    !pip install --no-deps bitsandbytes==0.49.0\n",
+        "    !pip install --no-deps accelerate==1.12.0\n",
+        "    !pip install --no-deps peft==0.18.0\n",
+        "    !pip install --no-deps trl==0.26.2\n",
+        "    !pip install --no-deps triton==3.5.1\n",
+        "    !pip install --no-deps cut_cross_entropy==25.1.1\n",
+        "    !pip install --no-deps unsloth_zoo==2026.1.2\n",
         "    !pip install sentencepiece protobuf \"datasets==4.3.0\" \"huggingface_hub>=0.34.0\" hf_transfer\n",
         "    !pip install --no-deps unsloth==2025.12.10\n",
         "!pip install transformers==4.56.2\n",
-        "!pip install --no-deps trl==0.22.2"
+        "!pip install --no-deps trl==0.26.2"
       ]
     },
     {
