--- a/Qwen3(0_6B)_ja_dataset_FT.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT.ipynb
@@ -50,6 +50,8 @@
       },
       "source": [
         "### Step1.Unslothのインストール"
+        "トラブルを減らすために動作確認ができたソフトウェアのバージョンに固定しています。\n",
+        "\n",
       ]
     },
     {
@@ -492,7 +494,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title Show current memory stats\n",
+        "# @title 現在のメモリ(VRAM)使用状況\n",
         "gpu_stats = torch.cuda.get_device_properties(0)\n",
         "start_gpu_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
         "max_memory = round(gpu_stats.total_memory / 1024 / 1024 / 1024, 3)\n",
