--- a/Qwen3(0_6B)_ja_dataset_FT.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/kolinz/notebook4AI/blob/main/Qwen3(0_6B)_ja_dataset_FT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "bmW9jv7CGLrl"
       },
       "source": [
@@ -114,6 +124,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "3-1. Qwen3 0.6B を指定"
+      ],
+      "metadata": {
+        "id": "tnJNdoEbZ3BZ"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -140,7 +159,7 @@
         "id": "SXd9bTZd1aaL"
       },
       "source": [
-        "LoRA アダプターを追加"
+        "3-2. LoRA アダプターを追加"
       ]
     },
     {
@@ -189,7 +208,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "チャットテンプレートに、`qwen3-instruct`を使用します。"
+        "4-1. チャットテンプレートに、`qwen3-instruct`を使用します。"
       ],
       "metadata": {
         "id": "rsQsQb95GiT-"
@@ -213,7 +232,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Google Drive上のデータセット読み込み"
+        "4-2. Google Drive上のデータセット読み込み"
       ],
       "metadata": {
         "id": "5GtVmxLKJtn7"
@@ -243,7 +262,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "読み込んだデータセットの型を確認。"
+        "4-3. 読み込んだデータセットの型を確認。"
       ],
       "metadata": {
         "id": "7sYThZpGEgez"
@@ -263,7 +282,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "読み込んだデータセットを、Pythonで扱えるように、list型に変更する。"
+        "4-4. 読み込んだデータセットを、Pythonで扱えるように、list型に変更する。"
       ],
       "metadata": {
         "id": "GBPDAim8EnyW"
@@ -288,7 +307,7 @@
         "id": "K9CBpiISFa6C"
       },
       "source": [
-        "ファインチューニングのために、「standardize_data_formats」を使用してデータセットを、必要な形式に変換します。"
+        "4-5. ファインチューニングのために、「standardize_data_formats」を使用してデータセットを、必要な形式に変換します。"
       ]
     },
     {
@@ -306,7 +325,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "データセットの１つ目を確認します。"
+        "4-6. データセットの１つ目を確認します。"
       ],
       "metadata": {
         "id": "Q7bHo5Ca_zRK"
@@ -329,7 +348,7 @@
         "id": "6i5Sx9In7vHi"
       },
       "source": [
-        "100 行目がどのようになっているか見てみましょう。"
+        "4-7. 100 行目がどのようになっているか見てみましょう。"
       ]
     },
     {
@@ -338,7 +357,7 @@
         "id": "8Xs0LXio7rfd"
       },
       "source": [
-        "ここで、`Qwen-3` のチャット テンプレートを会話に適用し、`text`に保存する必要があります。"
+        "4-7-1. `Qwen-3` のチャット テンプレートを会話に適用し、`text`に保存する必要があります。"
       ]
     },
     {
@@ -363,7 +382,7 @@
         "id": "ndDUB23CGAC5"
       },
       "source": [
-        "チャットテンプレートにより、100行目のデータがどのようになったか見ましょう。\n"
+        "4-7-2. チャットテンプレートにより、100行目のデータがどのようになったか見ましょう。\n"
       ]
     },
     {
@@ -387,6 +406,15 @@
         "### Step5.モデルをトレーニング(学習)しましょう。\n",
         "高速化のため60ステップで実行しますが、`num_train_epochs=1` に設定してフル実行し、`max_steps=None` をオフにすることもできます"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5-1. トレーニングのためのパラメータを設定します。"
+      ],
+      "metadata": {
+        "id": "82egfFc-ahCI"
+      }
     },
     {
       "cell_type": "code",
@@ -426,7 +454,7 @@
         "id": "C_sGp5XlG6dq"
       },
       "source": [
-        "また、Unslothの`train_on_completions`メソッドを使用して、アシスタントの出力のみで学習し、ユーザーの入力による損失を無視します。これにより、ファインチューンの精度が向上します。"
+        "5-2. Unslothの`train_on_completions`メソッドを使用して、アシスタントの出力のみで学習し、ユーザーの入力による損失を無視します。これにより、ファインチューンの精度が向上します。"
       ]
     },
     {
@@ -451,7 +479,7 @@
         "id": "Dv1NBUozV78l"
       },
       "source": [
-        "もう一度100行目を出力してみましょう。"
+        "5-3. もう一度100行目を出力してみましょう。"
       ]
     },
     {
@@ -471,7 +499,7 @@
         "id": "4Kyjy__m9KY3"
       },
       "source": [
-        "次に、マスクされた例を出力してみましょう。答えだけが表示されるはずです。"
+        "5-4. 次に、マスクされた例を出力してみましょう。答えだけが表示されるはずです。"
       ]
     },
     {
@@ -486,6 +514,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "5-4. 現在のメモリ(VRAM)の状況を確認する。"
+      ],
+      "metadata": {
+        "id": "Mk0-7TsibBoK"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -493,7 +530,6 @@
       },
       "outputs": [],
       "source": [
-        "# @title Show current memory stats\n",
         "gpu_stats = torch.cuda.get_device_properties(0)\n",
         "start_gpu_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
         "max_memory = round(gpu_stats.total_memory / 1024 / 1024 / 1024, 3)\n",
@@ -507,7 +543,7 @@
         "id": "CNP1Uidk9mrz"
       },
       "source": [
-        "モデルのトレーニングを実行しましょう。"
+        "5-5. モデルのトレーニングを実行しましょう。"
       ]
     },
     {
@@ -522,6 +558,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "5-6. 使用したメモリ(VRAM)を確認しましょう。"
+      ],
+      "metadata": {
+        "id": "U511ROc0bLIB"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -529,7 +574,6 @@
       },
       "outputs": [],
       "source": [
-        "# @title 使用したメモリ量（VRAM）\n",
         "used_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
         "used_memory_for_lora = round(used_memory - start_gpu_memory, 3)\n",
         "used_percentage = round(used_memory / max_memory * 100, 3)\n",
@@ -556,6 +600,15 @@
         "\n",
         "For reasoning chat based inference, `temperature = 0.6, top_p = 0.95, top_k = 20`"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6-1. トレーニングしたモデルを作って推論してみましょう。"
+      ],
+      "metadata": {
+        "id": "urjHH2RJbTC4"
+      }
     },
     {
       "cell_type": "code",
@@ -597,6 +650,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "7-1. トレーニングしたモデルを保存します。"
+      ],
+      "metadata": {
+        "id": "m8R5JDVubaDC"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -616,7 +678,7 @@
         "id": "AEEcJ4qfC7Lp"
       },
       "source": [
-        "ここで、推論用に保存した LoRA アダプターをロードする場合は、`False` を `True` に設定します。"
+        "7-2. 推論用に保存した LoRA アダプターをロードする場合は、`False` を `True` に設定します。"
       ]
     },
     {
@@ -642,8 +704,7 @@
         "id": "TCv4vXHd61i7"
       },
       "source": [
-        "#### GGUF / llama.cpp Conversion\n",
-        "`GGUF` / `llama.cpp` への保存をネイティブでサポートしました。`llama.cpp` をクローンし、デフォルトで `q8_0` に保存します。`q4_k_m` などのすべての手法が利用可能です。ローカル保存には `save_pretrained_gguf` を、HF へのアップロードには `push_to_hub_gguf` を使用してください。\n",
+        "Unslothでは、`GGUF` / `llama.cpp` への保存をネイティブでサポートしました。`llama.cpp` をクローンし、デフォルトで `q8_0` に保存します。`q4_k_m` などのすべての手法が利用可能です。ローカル保存には `save_pretrained_gguf` を、HF へのアップロードには `push_to_hub_gguf` を使用してください。\n",
         "\n",
         "サポートされている量子化手法（[Wiki ページ](https://github.com/unslothai/unsloth/wiki#gguf-quantization-options) の全リストをご覧ください）：\n",
         "* `q8_0` - 高速変換。リソース消費量は多いですが、一般的には許容範囲です。\n",
@@ -657,7 +718,7 @@
         "id": "Q974YEVPI7JS"
       },
       "source": [
-        "GGUF に Hugging Face アカウントをプッシュする場合は、if False を if True に設定し、Hugging Face トークンとアップロード場所を追加してください。デフォルトでは、8ビット量子化で、GGUF形式をexport_modelフォルダに保存します。"
+        "7-3. GGUF に Hugging Face アカウントをプッシュする場合は、if False を if True に設定し、Hugging Face トークンとアップロード場所を追加してください。デフォルトでは、8ビット量子化で、GGUF形式をexport_modelフォルダに保存します。"
       ]
     },
     {
@@ -711,7 +772,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Ollamaのインストール"
+        "8-1. Ollamaのインストール"
       ],
       "metadata": {
         "id": "nKWKUyBJpGh2"
@@ -731,7 +792,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Ollamaの起動"
+        "8-2. Ollamaの起動"
       ],
       "metadata": {
         "id": "vmgV6NxapKjq"
@@ -754,7 +815,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### モデルファイルの確認"
+        "8-3. モデルファイルの確認"
       ],
       "metadata": {
         "id": "uij_xUOuqM4P"
@@ -774,7 +835,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Ollamaと互換性のあるモデルを作成"
+        "8-4. Ollamaと互換性のあるモデルを作成"
       ],
       "metadata": {
         "id": "Wvqjhk4XqQiH"
@@ -794,7 +855,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Ollamaで推論を実行"
+        "8-5. Ollamaで推論を実行"
       ],
       "metadata": {
         "id": "0ThGx_4jqimf"
@@ -828,8 +889,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### モデルのダウンロード\n",
-        "ファインチューニングしたモデルをダウンロードします。ダウンロードしたモデルは、LM Studioで読み込み、文章生成に使うことができます。PCやサーバー上のOllamaで使いたい場合は、ファインチューニングしたモデルのダウンロード後、先ほど作成したModelfileもダウンロードしましょう。"
+        "9-1. モデルのダウンロード\n",
+        "ファインチューニングしたモデルをダウンロードします。\n",
+        "ダウンロードしたモデルは、LM Studioで読み込み、文章生成に使うことができます。PCやサーバー上のOllamaで使いたい場合は、ファインチューニングしたモデルのダウンロード後、先ほど作成したModelfileもダウンロードしましょう。"
       ],
       "metadata": {
         "id": "9ECFAC9lTh39"
@@ -850,7 +912,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "モデルファイルのダウンロード（Ollamaでは必須）"
+        "9-2. モデルファイルのダウンロード（Ollamaでは必須）"
       ],
       "metadata": {
         "id": "W0SM43ubh0aD"
@@ -908,7 +970,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "cloudspace",
