--- a/Qwen3(0_6B)_ja_dataset_FT.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/kolinz/notebook4AI/blob/main/Qwen3(0_6B)_ja_dataset_FT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "bmW9jv7CGLrl"
       },
       "source": [
@@ -516,7 +506,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5-4. 現在のメモリ(VRAM)の状況を確認する。"
+        "5-5. 現在のメモリ(VRAM)の状況を確認する。"
       ],
       "metadata": {
         "id": "Mk0-7TsibBoK"
@@ -543,7 +533,7 @@
         "id": "CNP1Uidk9mrz"
       },
       "source": [
-        "5-5. モデルのトレーニングを実行しましょう。"
+        "5-6. モデルのトレーニングを実行しましょう。"
       ]
     },
     {
@@ -560,7 +550,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5-6. 使用したメモリ(VRAM)を確認しましょう。"
+        "5-7. 使用したメモリ(VRAM)を確認しましょう。"
       ],
       "metadata": {
         "id": "U511ROc0bLIB"
@@ -970,8 +960,7 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "cloudspace",
