--- a/Qwen3(0_6B)_ja_dataset_FT.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT.ipynb
@@ -31,7 +31,7 @@
         "| \"[[{\"\"role\"\":\"\"user\"\",\"\"content\"\":\"\"キルチェーン（Cyber Kill Chain）とは何ですか？\"\"},{\"\"role\"\":\"\"assistant\"\",\"\"content\"\":\"\"キルチェーンとは、攻撃の一連の段階（偵察・侵入・実行など）を整理したモデルです。各段階で対策を講じることで攻撃を阻止できます。\"\"}]]\" |\n",
         "| \"[[{\"\"role\"\":\"\"user\"\",\"\"content\"\":\"\"メールセキュリティでSPFとは何ですか？\"\"},{\"\"role\"\":\"\"assistant\"\",\"\"content\"\":\"\"SPFは送信元メールサーバの正当性を検証する仕組みで、なりすましメール対策に利用されます。\"\"}]]\" |\n",
         "\n",
-        "■ ShareGPT形式で作成してください。サンプルがあるので、[サンプル](https://github.com/kolinz/notebook4AI/blob/main/dataset-sample/faq-dataset.csv)を元に作成しても良いですし、上記を参考にゼロから作成することもできます。\n",
+        "■ 上記のデータ構造をShareGPT形式と言います。作成にあたってはサンプルがあるので、[サンプル](https://github.com/kolinz/notebook4AI/blob/main/dataset-sample/faq-dataset.csv)を元に作成しても良いですし、上記を参考にゼロから作成することもできます。\n",
         "\n",
         "■ 120行のデータセットで動作確認済みです。ファインチューニング向けなので、最低でも100行は超えるように自作しましょう。動作確認結果と同じく、120行にしても良いですし、がんばって200行を超えても構いません。\n",
         "\n",
