--- a/Qwen3(0_6B)_ja_dataset_FT_with_SystemPrompt.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT_with_SystemPrompt.ipynb
@@ -808,7 +808,7 @@
         "}\n",
         "\n",
         "# 使用するプロンプトを選択\n",
-        "system_prompt = SYSTEM_PROMPTS[\"senpai\"]  # ← ここで選択"
+        "system_prompt = SYSTEM_PROMPTS[\"default\"]  # ← ここで選択"
       ],
       "metadata": {
         "id": "Jb4eprzmJQ33"
