--- a/Qwen3(0_6B)_ja_dataset_FT_with_SystemPrompt.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT_with_SystemPrompt.ipynb
@@ -529,7 +529,7 @@
         "id": "CNP1Uidk9mrz"
       },
       "source": [
-        "5-6. モデルのトレーニングを実行しましょう。"
+        "5-6. モデルのトレーニングを実行しましょう。工夫できる人は、Lossが0.5～0.8になるようにmax_stepsを100などに変えたり、学習データセットを見直すのもありです。"
       ]
     },
     {
