--- a/Qwen3(0_6B)_ja_dataset_FT_with_SystemPrompt.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT_with_SystemPrompt.ipynb
@@ -732,7 +732,7 @@
       "source": [
         "7-4, Modelfileの作成\n",
         "\n",
-        "SYTEMの内容を書き換えることで、生成AIのキャラ付けができるのでいろいろチャレンジしてみよう。\n",
+        "SYTEMの内容を書き換えることで、生成AIのキャラ付けができるのでいろいろチャレンジしてみよう。いわば人格づくりといえば良いか、「苦悩と祈りをありったけ込めて作ること」。なぜ祈りなのか、動かせばわかる。\n",
         "\n",
         "---- 例 -----\n",
         "\n",
