--- a/Qwen3(0_6B)_ja_dataset_FT_with_SystemPrompt.ipynb
+++ b/Qwen3(0_6B)_ja_dataset_FT_with_SystemPrompt.ipynb
@@ -778,7 +778,7 @@
       "cell_type": "markdown",
       "source": [
         "### Step8.保存したモデルを使い、Ollamaで推論\n",
-        "Modelfileと、.ggufで終わるGGUFファイル（＝モデル本体）があることを確認すること。Modelfileがない場合は、生成処理に時間がかかっているだけなので、少し待つ。"
+        "Modelfileと、.ggufで終わるGGUFファイル（＝モデル本体）があることを確認すること。"
       ],
       "metadata": {
         "id": "-YjuYqlHoast"
